--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -38,4 +38,9 @@
     <color name="green">#FF388E3C</color>
     <color name="orange">#FFF57C00</color>
     <color name="purple">#FF7B1FA2</color>
+
+    <color name="light_blue">#E3F2FD</color>
+    <color name="class_item_background">#F8F9FA</color>
+    <color name="divider_color">#E0E0E0</color>
+    <color name="red">#FF5252</color>
 </resources>
