--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -200,7 +200,7 @@
                         android:id="@+id/etIntake"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Intake"
+                        android:hint="Intake (45 - 1)"
                         android:textSize="16sp" />
 
                 </com.google.android.material.textfield.TextInputLayout>
