--- a/app/src/main/res/layout/activity_routine.xml
+++ b/app/src/main/res/layout/activity_routine.xml
@@ -65,7 +65,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="BBA"
+                android:text=""
                 android:textColor="@color/white"
                 android:textSize="14sp"
                 android:alpha="0.8"
@@ -75,7 +75,7 @@
                 android:id="@+id/tvSemester"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Fall, 2025"
+                android:text=""
                 android:textColor="@color/white"
                 android:textSize="14sp"
                 android:alpha="0.8"
