--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -227,17 +227,17 @@
                             style="@style/GridButton"
                             android:layout_row="2"
                             android:layout_column="1"
-                            android:id="@+id/btnProfile">
+                            android:id="@+id/btnRide">
 
                             <ImageView
                                 android:layout_width="40dp"
                                 android:layout_height="40dp"
-                                android:src="@drawable/ic_person"
+                                android:src="@drawable/ic_bike"
                                 app:tint="@color/primary_color"/>
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="Profile"
+                                android:text="Ride Sharing"
                                 style="@style/GridButtonText"
                                 android:layout_marginTop="12dp"/>
 
