update ride sharing functionality

--- a/app/src/main/res/layout/item_ride.xml
+++ b/app/src/main/res/layout/item_ride.xml
@@ -196,7 +196,7 @@
 
         <!-- Book Button -->
         <Button
-            android:id="@+id/btnBookRide"
+            android:id="@+id/btnAction"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Book Ride"
