--- a/app/src/main/res/layout/activity_ride_sharing.xml
+++ b/app/src/main/res/layout/activity_ride_sharing.xml
@@ -47,11 +47,11 @@
                 android:textStyle="bold" />
 
             <ImageButton
-                android:id="@+id/btnFilter"
+                android:id="@+id/btnCreate"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
-                android:src="@drawable/ic_filter"
+                android:src="@drawable/ic_add"
                 app:tint="@color/white" />
 
         </LinearLayout>
